fix: envia alterações pendentes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- ==================== BOTÕES FLUTUANTES FIXOS ==================== -->
     <!-- Estes botões ficam fixos na tela, sobrepondo todo o conteúdo -->
     <div class="botoes-flutuantes">
-        <a href="https://wa.me/5511999999999?text=Olá!%20Vi%20seu%20currículo%20online%20e%20gostaria%20de%20conversar%20sobre%20uma%20oportunidade." 
+        <a href="https://wa.me/5592981067373?text=Olá!%20Vi%20seu%20currículo%20online%20e%20gostaria%20de%20conversar%20sobre%20uma%20oportunidade." 
            target="_blank" 
            class="btn-flutuante btn-whatsapp">
             <i class="fab fa-whatsapp"></i>
@@ -44,6 +44,7 @@
                 <li><a href="#objetivo">Objetivo</a></li>
                 <li><a href="#qualificacoes">Qualificações</a></li>
                 <li><a href="#contato">Contato</a></li>
+                
             </ul>
 
             <!-- Menu Mobile -->
@@ -178,7 +179,7 @@
                 <div class="objetivo-card">
                     <i class="fas fa-industry"></i>
                     <h3>Cargo Desejado</h3>
-                    <p>Operador de Máquinas de Injeção Plástica ou Prensa, Auxiliar de Produção, 
+                    <p>Vendas online (captação de clientes), Operador de Máquinas de Injeção Plástica ou Prensa, Auxiliar de Produção, 
                      Auxiliar de Linha de Produção, Informática, Digitador, Auxiliar de Redes</p>
                 </div>
 
@@ -313,15 +314,15 @@
                 <div class="contato-card">
                     <i class="fas fa-map-marker-alt"></i>
                     <h3>Localização</h3>
-                    <p>Cidade Nova 2, Manaus/Am</p>
-                    <span class="contato-destaque">Próximo ao Distrito</span>
+                    <p>Rua Travessa Lindóia Nº 15, Conjunto, Canarana 1, Bairro, Cidade Nova 2, Cep: 69097-360 Manaus/Am</p>
+                    <span class="contato-destaque">Ponto de referência: Por trás da Eucatur</span>
                 </div>
             </div>
 
             <div class="cta-final">
                 <h3>Pronto para começar?</h3>
                 <p>Estou disponível para entrevistas presenciais ou por videochamada.</p>
-                <p class="horario-atendimento">Tenha acesso ao meu CurrÍculo em PDF, baixando pelo Botão
+                
                 </p>
             </div>
         </div>
