--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <span>Falar no WhatsApp</span>
         </a>
         
-        <a href="curriculo.pdf" 
+        <a href="docs/curriculo.pdf" 
            download 
            class="btn-flutuante btn-curriculo">
             <i class="fas fa-file-pdf"></i>
