fix: envia alterações pendentes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- ==================== BOTÕES FLUTUANTES FIXOS ==================== -->
     <!-- Estes botões ficam fixos na tela, sobrepondo todo o conteúdo -->
     <div class="botoes-flutuantes">
-        <a href="https://wa.me/5592981067373?text=Olá!%20Vi%20seu%20currículo%20online%20e%20gostaria%20de%20conversar%20sobre%20uma%20oportunidade." 
+        <a href="https://wa.me/5592981100041?text=Olá!%20Vi%20seu%20currículo%20online%20e%20gostaria%20de%20conversar%20sobre%20uma%20oportunidade." 
            target="_blank" 
            class="btn-flutuante btn-whatsapp">
             <i class="fab fa-whatsapp"></i>
@@ -75,14 +75,14 @@
                         <i class="fas fa-map-marker-alt"></i>
                         <span>Manaus</span>
                     </div>
-                    <div class="info-item">
+                    <!-- <div class="info-item">
                         <i class="fas fa-birthday-cake"></i>
-                        <span>48 anos</span>
-                    </div>
-                    <div class="info-item">
+                        <span>47 anos</span>
+                    </div> -->
+                    <!-- <div class="info-item">
                         <i class="fas fa-graduation-cap"></i>
                         <span>Ensino Médio Completo</span>
-                    </div>
+                    </div> -->
                 </div>
 
                 <div class="disponibilidade-hero">
@@ -137,7 +137,7 @@
                     
                     <div class="dado-item">
                         <span class="dado-label">Idade:</span>
-                        <span class="dado-valor">48 anos</span>
+                        <span class="dado-valor">47 anos</span>
                     </div>
                     
                     <div class="dado-item">
@@ -300,8 +300,8 @@
                 <div class="contato-card">
                     <i class="fab fa-whatsapp"></i>
                     <h3>WhatsApp</h3>
-                    <p>(92) 98106-7373</p>
-                    <span class="contato-destaque">Ligação ou WhatsApp</span>
+                    <p>(92) 98110-0041</p>
+                    <span class="contato-destaque">Ligação ou WhatsApp Principal</span>
                 </div>
 
                 <div class="contato-card">
@@ -314,7 +314,7 @@
                 <div class="contato-card">
                     <i class="fas fa-map-marker-alt"></i>
                     <h3>Localização</h3>
-                    <p>Rua Travessa Lindóia Nº 15, Conjunto, Canarana 1, Bairro, Cidade Nova 2, Cep: 69097-360 Manaus/Am</p>
+                    <p>Rua Travessa Lindóia Nº 15, Conjunto, Canarana 1, Bairro, Cidade Nova 2, Manaus/Am</p>
                     <span class="contato-destaque">Ponto de referência: Por trás da Eucatur</span>
                 </div>
             </div>
