fix: envia alterações pendentes

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <div class="carta-apresentacao">
                 <h3>Carta de Apresentação</h3>
                 <p>
-                    "Prezados recrutadores, busco uma oportunidade no mercado de trabalho. Embora eu já tenha experiência, mesmo assim, passo a me <strong>dedicar totalmente, 
+                    "Prezados recrutadores, busco uma oportunidade no mercado de trabalho. Passo a me <strong>dedicar totalmente, 
                     com um aprendizado rápido e comprometimento</strong> com as tarefas. Estou preparado para 
                     iniciar essa nova etapa, seguir rigorosamente os procedimentos e contribuir 
                     positivamente com a equipe. Aguardo a oportunidade de uma entrevista 
