fix: envia alterações pendentes

--- a/index.html
+++ b/index.html
@@ -62,12 +62,11 @@
             <div class="hero-content">
                 <p class="hero-subtitle">Buscando Emprego</p>
                 <h1 class="hero-title">Moisés Marques Pereira</h1>
-                <h2 class="hero-job">Busco emprego nas áreas onde adiquiro experiência</h2>
                 
                 <p class="hero-description">
                     Profissional dedicado, proativo e com grande disposição para aprender cada vez mais. 
-                    Busco oportunidade nas áreas, referente as minhas qualificações para desenvolver 
-                    minha carreira e contribuir com o crescimento profissional.
+                    Busco oportunidade para desenvolver e contribuir com o crescimento 
+                    profissional.
                 </p>
 
                 <div class="hero-info">
@@ -119,7 +118,7 @@
                     <div class="destaque-box">
                         <h3><i class="fas fa-star"></i> Por que me contratar?</h3>
                         <ul>
-                            <li>Tenho experiência - sem vícios, pronto para me adaptar ao ambiente de trabalho</li>
+                            <li>Sem vícios, pronto para me adaptar ao ambiente de trabalho</li>
                             <li>Alta disposição para os cargos e funções quando necessário</li>
                             <li>Facilidade de compreensão e atenção aos detalhes</li>
                             <li>Compromisso com segurança e normas</li>
@@ -179,7 +178,7 @@
                 <div class="objetivo-card">
                     <i class="fas fa-industry"></i>
                     <h3>Cargo Desejado</h3>
-                    <p>Vendas online (captação de clientes), Operador de Máquinas de Injeção Plástica ou Prensa, Auxiliar de Produção, 
+                    <p>Agente de Portaria, Vendas online (captação de clientes), Operador de Máquinas de Injeção Plástica ou Prensa, Auxiliar de Produção, 
                      Auxiliar de Linha de Produção, Informática, Digitador, Auxiliar de Redes</p>
                 </div>
 
@@ -252,7 +251,7 @@
 
                 <!-- Conhecimentos Técnicos (básicos para primeiro emprego) -->
                 <div class="qualificacao-categoria">
-                    <h3><i class="fas fa-tools"></i> Conhecimentos</h3>
+                    <h3><i class="fas fa-tools"></i> Alguns Cursos em destaque</h3>
                     
                     <div class="conhecimento-tags">
                         <span class="tag">Informática Básica</span>
