fix: envia alterações pendentes

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 <div class="objetivo-card">
                     <i class="fas fa-industry"></i>
                     <h3>Cargo Desejado</h3>
-                    <p>Agente de Portaria, Vendas online (captação de clientes), Operador de Máquinas de Injeção Plástica ou Prensa, Auxiliar de Produção, 
+                    <p>Agente de Portaria, Social Media, Vendas online (captação de clientes), Operador de Máquinas de Injeção Plástica ou Prensa, Auxiliar de Produção, 
                      Auxiliar de Linha de Produção, Informática, Digitador, Auxiliar de Redes</p>
                 </div>
 
